# dandy

./: LICENSE  README.md  pyproject.toml
docs/: .Dandy.md.swp  Dandy.bup  Dandy.md  Dandy483.md  dandyIntro.html  references.html  testingLog.html  widgetApi.md
docs/docPics/: docPicsInfo.txt  exampleClasses.eps  widgetClasses.eps
src/examples/: AnalogHWShort.py  ButtonGUI.py  ButtonPicGUI.py  DInDemo.py  DigitalHWLong.py  DigitalHWShort.py  DigitalIn.py  DigitalNoHW.py  DigitalOut.py  DigitalOutDisplay.py  DigitalWithHW.py  KnobDemo.py  LEDBarDemo.py  MCDemo.py  MCDemo.py.bup  MCDemo2.py  MCDemo2Long.py  MCDemo2Short.py  MagnetDemo.py  MotorControl.py  MotorDemo.py  ReadInJson.py  TwoMC.py  TwoMCv2.py  asyncPractice4.py  minimal.py  o.txt  out.txt  serialReaderParse.py  serialread.py  serialwrite.py  singleAInDemo.py  sliderToPics.py  tripleAInDemo.py
src/microcontr/: analogToComputer.py  analogToComputerCP.py  analogToComputerMP.py  analogToComputerPSoC.py  magnetCP.py  magnetMP.py  magnetPSoC.py  motor1CP.py  motor1MP.py  motor1PSoC.py  motor2CP.py  motor2MP.py  motor2PSoC.py  serialReadCP.py  serialReadMP.py  serialReadPSoC.py  serialReader1.py  serialWriteCP.py  serialWriteMP.py  serialWritePSoC.py  undefined
src/utilities/: SerialAndGui.py
src/widgets/: AMKRDisplay.py  ANanoEveryDisplay.py  AUnoDisplay.py  AnalogInDisplay.py  Cy8cprotoDisplay.py  Cyc8protoDisplay.py  DialDisplay.py  KnobDisplay.py  LEDBarDisplay.py  LEDDisplay.py  MCDisplay.py  PSoCDisplay.py  RPiDisplay.py  RPiPicoDisplay.py  SimplePlotDisplay.py  SlideDisplay.py  SymbolDisplay.py  (+2 more)
(+8 files in other folders)
